# langgraph-replay

./: .gitignore  LICENSE  README.md  ROADMAP.md  bad_nodes.json  bad_run.json  bad_run_pretty.json  bad_states.txt  demo_upstream_report.json  good_nodes.json  good_run.json  good_run_pretty.json  good_states.txt  pyproject.toml  real_report.json  watchdog-report.json
.agenttrace/: baseline.json
.github/workflows/: agenttrace-watchdog-example.yml  tests.yml
.mimocode/plans/: 1782373130686-witty-comet.md
agenttrace/: __init__.py
agenttrace/annotations/: __init__.py  cli.py  models.py  store.py
agenttrace/counterfactual/: __init__.py  cli.py  replay.py
agenttrace/fixtures/: baseline_run_fixture.json  clean_run_fixture.json  counterfactual_graph_fixture.py  false_regression_fixture.json  legitimate_retry_run_fixture.json  missing_node_run_fixture.json  regressed_run_fixture.json  stuck_loop_run_fixture.json  upstream_divergence_fixture.json
agenttrace/loopdetect/: __init__.py  classifier.py  cli.py  cycle_finder.py  embeddings.py
agenttrace/tests/: test_annotation_store.py  test_classifier.py  test_counterfactual_replay.py  test_cycle_finder.py  test_phase7.py  test_semantic_diff.py  test_upstream_divergence.py  test_watchdog_cli.py  test_watchdog_compare.py
agenttrace/watchdog/: __init__.py  baseline.py  cli.py  compare.py  helpers.py  report.py  semantic_diff.py  upstream.py
assets/: README.md
demo/: README.md  research_agent.py  run_demo.py
examples/: simple_agent.py
src/langgraph_replay/: __init__.py  blame.py  cli.py  diagnosis.py  diff.py  recorder.py  replay.py  search.py  storage.py  watchdog.py
tests/: conftest.py  test_blame.py  test_diagnosis.py  test_diff.py  test_providers.py  test_recorder.py  test_search.py  test_storage.py  test_watchdog.py
(+6 files in other folders)
