[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langgraph-replay"
version = "0.1.0"
description = "Record, replay, and debug LangGraph agent executions"
requires-python = ">=3.9"
dependencies = [
    "langgraph>=0.1.0",
    "langchain-core>=0.1.0",
    "click>=8.0",
    "rich>=13.0",
    "textual>=0.50.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
eval = ["pytest-llm>=0.1.0"]

[project.scripts]
langgraph-replay = "langgraph_replay.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
