[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langgraph-replay"
version = "0.1.0"
description = "Record, replay, and debug LangGraph agent executions"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Sushit", email = "your@email.com"}]
keywords = ["langgraph", "langchain", "debugging", "observability", "replay", "agents", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "langgraph>=0.1.0",
    "langchain-core>=0.1.0",
    "click>=8.0",
    "rich>=13.0",
    "textual>=0.50.0",
    "pydantic>=2.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio", "pytest-cov"]
eval = ["pytest-llm>=0.1.0"]

[project.scripts]
langgraph-replay = "langgraph_replay.cli:main"

[project.urls]
Homepage = "https://github.com/Sushit-prog/langgraph-replay"
Repository = "https://github.com/Sushit-prog/langgraph-replay"

[tool.pytest.ini_options]
testpaths = ["tests"]
